swim_common/src/form/tests/derive/form/generic.stderr
error[E0599]: no method named `as_value` found for struct `S<Valid, Invalid>` in the current scope
  --> $DIR/generic.rs:34:15
   |
21 |     struct Invalid;
   |     --------------- doesn't satisfy `Invalid: Form`
...
24 |     struct S<A, B> {
   |     --------------
   |     |
   |     method `as_value` not found for this
   |     doesn't satisfy `S<Valid, Invalid>: Form`
...
34 |     let _ = s.as_value();
   |               ^^^^^^^^ method not found in `S<Valid, Invalid>`
   |
   = note: the method `as_value` exists but the following trait bounds were not satisfied:
           `Invalid: Form`
           which is required by `S<Valid, Invalid>: Form`
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `as_value`, perhaps you need to implement it:
           candidate #1: `Form`
